package Main.Cookies;

import Main.Animation.Animate;
import Main.Asset;
import Main.Image.OutlineTextImage;
import Main.ObjectInGame.Items.CroissantType;
import javafx.scene.effect.DropShadow;
import javafx.scene.paint.Color;

public class CrossiantCookie extends Cookie {

    private int croissantCycle = 0;
    private boolean croissantReady = false;
    private OutlineTextImage counterText;

    public CrossiantCookie() {
        super(3, "Croissant", 140,
                """
                        Every 30 Jellies collected,
                        a Croissant Jelly falls from the sky.
                        Original grants bonus points,
                        Butter gives a Speed Boost,
                        and Strawberry restores 20 HP.""");
        setImgURL("Croissant_Cookie_sheet");
        setProfileImg(Asset.getImage("Profile_Cross"));
        setScore(256200);
        setSkillCounter(0);
        setHasCooldown(false);
    }

    @Override
    public Animate createCookie() {

        Animate anim = super.createCookie();

        counterText = new OutlineTextImage("0/30", 'C', 28);
        counterText.setStyle("-fx-font-size: 28px; -fx-font-weight: bold;");
        counterText.setColor(Color.YELLOW);

        DropShadow shadow = new DropShadow();
        shadow.setRadius(5);
        shadow.setOffsetY(2);
        shadow.setColor(Color.BLACK);

        counterText.setEffect(shadow);

        counterText.layoutXProperty().bind(
                anim.layoutXProperty()
                        .add(anim.fitWidthProperty().divide(2))
                        .subtract(counterText.boundsInLocalProperty().get().getWidth() / 2)
        );

        counterText.layoutYProperty().bind(
                anim.layoutYProperty().subtract(20)
        );

        if (getParentLayer() != null) {
            getParentLayer().getChildren().add(counterText);
        }

        return anim;
    }

    public void onJellyCollected() {

        setSkillCounter(getSkillCounter() + 1);

        if (counterText != null) {
            counterText.setText(getSkillCounter() + "/30");
        }

        if (getSkillCounter() >= 30) {

            setSkillCounter(0);
            croissantReady = true;

            if (counterText != null) {
                counterText.setText("0/30");
            }
        }
    }

    public boolean isCroissantReady() {
        return croissantReady;
    }

    public CroissantType consumeCroissant() {

        croissantReady = false;

        CroissantType type;

        switch (croissantCycle) {
            case 0 -> type = CroissantType.ORIGINAL;
            case 1 -> type = CroissantType.BUTTER;
            case 2 -> type = CroissantType.STRAWBERRY;
            default -> type = CroissantType.ORIGINAL;
        }

        croissantCycle = (croissantCycle + 1) % 3;

        return type;
    }

    @Override
    public void useSkill() {
    }
}
